# privte-mdu-risk

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
archive/legacy_2026_06_10/: README.md
archive/legacy_2026_06_10/docs/: aaai_aisi_submission_plan.md  paper.md  technical_plan.md  video_to_text_preprocessor_design.md
archive/legacy_2026_06_10/misc/: tmp.sh
configs/: README.md
configs/algorithms/: privte_behavior.v1.json  privte_flowlite.v0.json  privte_preprocessor.v0.json  privte_preprocessor.v1.json  privte_preprocessor.v2.json
docs/: aaai_aisi_submission_plan.md  advisor_brief.md  paper.md  privte_preprocessor_implementation_plan.md  video_to_text_preprocessor_design.md
docs/fulture_work/: zero_retention_privte_cvpr_plan.md
experiments/: README.md
experiments/llm/: README.md  run_llm_baseline.py
models/: README.md
mvp/: README.md  run_behavior_v1_mvp.py  run_flowlite_mvp.py  run_preprocessor_v0_mvp.py  run_preprocessor_v1_mvp.py  run_preprocessor_v2_mvp.py  run_simple_mvp.py
mvp/outputs/6_1data_simple_video_quality/: simple_mvp_report.6_1data.json
outputs/: README.md
pipeline/: README.md  build_evidence.py
pipeline/privte_pipeline/: __init__.py  evidence.py  extractors.py  io.py  llm_package.py  renderers.py  run.py
pipeline/privte_pipeline/algorithms/: README.md  (+9 more)
scripts/: README.md  audit_auxiliary_modalities.py  audit_privacy_evidence.py  build_combined_manifest.py  build_dataset_manifest.py  build_raw_person_jsonl.py  diagnose_results.py  flatten_data_root.py  join_labels_to_manifest.py  migrate_data_to_mnt_e.sh
(+372 files in other folders)
