[project]
name = "privte-mdu-risk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "mediapipe>=0.10.21",
    "numpy>=2.0.0",
    "opencv-python-headless>=4.10.0.84",
    "scipy>=1.14.0",
    "tqdm>=4.66.0",
    "ultralytics>=8.3.0",
]
